fix: :recycle: #6 fixed navbar due to botton spacing problem
reorganized reset, normalize, bootstrap and styles, there were failures in the button

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -35,6 +35,7 @@ h1 {
 
 .navbar {
   padding: 0;
+  background-color: black;
 
   &__div {
     display: flex;
@@ -54,7 +55,6 @@ h1 {
         rgba(18, 218, 135, 0.1) 67.34%,
         #0a9205 92.72%
       );
-    backdrop-filter: blur(5px);
     text-align: center;
     border-radius: 0px 0px 2px 2px;
     -webkit-border-radius: 0px 0px 2px 2px;
